<resources>
    <string name="app_name">Your age in Minutes</string>
    <string name="calculate_your">CALCULATOR YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">Select Date</string>
    <string name="selected_date">Selected Date</string>
    <string name="age_in_minutes">Age in minutes</string>
    <string name="textview">TextView</string>
</resources>